<resources>
    <string name="app_name">My CO2 Footprint</string>

    <!--    Login-->
    <string name="loginTitle">Login</string>
    <string name="emailHint">Email@email.com</string>
    <string name="passwordHint">Password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="loginButton">Login</string>
    <string name="newUser">New User?</string>
    <string name="signupLink"><u>Sign Up</u></string>

    <!--Signup page-->
    <string name="signupTitle">Sign-up</string>
    <string name="firstNameHint">First Name</string>
    <string name="lastNameHint">Last Name</string>
    <string name="confirmPasswordHint">Confirm password</string>
    <string name="signupBtn">Sign up</string>
    <string name="alreadyAMember"><u>I am already a member</u></string>


    <!--    Titels-->

    <!-- new txtPassword-->
    <string name="oldpassword">Old Password</string>
    <string name="newpassword">New Password</string>
    <string name="confirmnewpassword">Confirm New Password</string>
    <string name="old">Old Password</string>
    <string name="neww">New Password</string>
    <string name="confirmm">Confirm New Password</string>

    <string name="logoutbtn">Logout</string>
    <string name="logoutbtn2">Logout</string>
    <string name="imageButton3">Update Password</string>
    <string name="updatepass">Update Password</string>


    <!--Titles-->
    <string name="resultPageTitle">Your total CO2 footprint for today</string>
    <string name="tipsPageTitle">Green Tips</string>
    <string name="prevResultsTitle">Previous Results</string>
    <string name="newEntry">New Entry</string>
    <string name="previousResults">Previous Results</string>
    <string name="leaderboard">Leaderboard and Points</string>
    <string name="settings">Settings</string>
    <string name="tipsBtn">Tips to reduce my CO2 footprint</string>
    <string name="name2">Name</string>
    <string name="email2">Email</string>
    <string name="updapass">Update Password:</string>
    <string name="entryreminderr">entry reminder:</string>
    <string name="editTextTime2">00:00:00</string>
    <string name="tips">tips:</string>
    <string name="save">Save</string>
    <string name="forgetpassword">Forgot Password</string>
    <string name="sendEmail">Send to email</string>

    <string name="yourPoints">Your points</string>
    <string name="yourRank">Your rank</string>
    <string name="logout">Logout</string>
    <string name="emailaccount2">Email@email.com</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="amount">Amount </string>
    <string name="leaderboardTitle">Top 10</string>
    <string name="prefLoggedUser">loggedUser</string>
    <string name="notificationSent">About what would you like to be notified?</string>
    <string name="yourResults">Your Results</string>
    <string name="showMyResults"> Get Results</string>

    <string name="transportationTitle">Transportation</string>
    <string name="foodTitle">Food</string>
    <string name="electricsTitle">Electrics Usage</string>
    <string name="servicesTitle">Services</string>
    <string name="back">Back</string>

    <string name="chooseDate">Choose Entry Date</string>
    <string name="emptyDash">------</string>
    <string name="tipsSettings">Tips</string>
    <string name="entryReminder">Entry Reminder at</string>

    <string name="whenNotification">When would you like to get the notification?</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_admin_home_page">AdminHomePageActivity</string>
    <string name="title_activity_edit_admin">EditAdmin</string>
    <string name="DataEdit222">Edit Data</string>

    <string name="NewEnt222">New Entry</string>
    <string name="previousResultsBtn222">Previous Results</string>

    <string name="settingsBtn32">Settings</string>
    <string name="logout22">Logout</string>
    <string name="transportation">Transportation</string>
    <string name="food">Food</string>
    <string name="electric">Electric</string>
    <string name="services">Services</string>
    <string name="edittips">tips</string>
    <string name="type">Type</string>
    <string name="fueltype">Fuel Type</string>
    <string name="co2">CO2 Amount</string>
    <string name="addingItem">Adding Transportation</string>
    <string name="fuel">Fuel type</string>
    <string name="co2Amount">CO2 Amount</string>
    <string name="addItem">Add</string>
    <string name="amountt">CO2 Amount(Only Numbers)</string>
    <string name="editItem">Edit Transpotation</string>
    <string name="edititem2">Edit</string>
    <string name="typeedit">Motorbike</string>
    <string name="fueledit">Diesel</string>
    <string name="amountedit">CO2Amount(Only Numbers)</string>
    <string name="editItema">Edit Electric</string>

    <string name="editItemb">Edit Food</string>

    <string name="editItemc">Edit Services</string>

    <string name="adda">Add Electric</string>
    <string name="addb">Add Food</string>
    <string name="addc">Add Services</string>
    <string name="editOptionsTitle">What would you like to Edit ?</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="Question">Question</string>
    <string name="unit">Choose Unit</string>
    <string name="entryForResults">"Your Entry is Still Empty "</string>
    <string name="gCo2">gCo2</string>
    <string name="noResults">No Results to Show</string>
    <string name="isEntryNotificationSet">isEntryNotificationSet</string>
    <string name="entryNotificationTime">entryNotificationTime</string>
    <string name="co2EmissionsAmount">Co2 emissions amount</string>
    <string name="homePage">Home</string>
    <string name="accountInfo">Account Information</string>
    <string name="youGot">You got</string>
    <string name="points">points</string>


</resources>