<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuEntryHome"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/homePage"
        android:visible="false"
        app:showAsAction="always"
        tools:visibility="gone" />
    <item
        android:id="@+id/menuEntryPrevResults"
        android:icon="@drawable/ic_baseline_insert_chart_24"
        android:title="@string/prevResultsTitle"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuEntrySettings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings" />
    <item
        android:id="@+id/menuEntryLogout"
        android:icon="@drawable/ic_baseline_logout_24"
        android:title="@string/logout" />
</menu>