<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".EditMainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/transportation"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="160dp"
            android:layout_height="63dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="536dp"
            android:background="@drawable/button_round_shape"
            android:text="@string/transportation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintCircleRadius="@dimen/activity_horizontal_margin"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/edittips"
            android:layout_width="153dp"
            android:layout_height="50dp"
            android:layout_marginStart="76dp"
            android:layout_marginBottom="276dp"
            android:background="@drawable/button_round_shape"
            android:text="@string/edittips"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/services"
            android:layout_width="156dp"
            android:layout_height="53dp"
            android:layout_marginStart="112dp"
            android:layout_marginBottom="336dp"
            android:background="@drawable/button_round_shape"
            android:text="@string/services"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/food"
            android:layout_width="174dp"
            android:layout_height="54dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="468dp"
            android:background="@drawable/button_round_shape"
            android:text="@string/food"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/electric"
            android:layout_width="177dp"
            android:layout_height="54dp"
            android:layout_marginEnd="88dp"
            android:layout_marginBottom="400dp"
            android:background="@drawable/button_round_shape"
            android:text="@string/electric"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>