<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".HomePageActivity">

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="20dp"

        android:background="@drawable/round_btn_light_dark_green"
        android:onClick="logoutBtnClicked"
        android:text="@string/logout"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logout">

        <Button
            android:id="@+id/newEnteryBtn"
            android:layout_width="230dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:background="@drawable/button_round_shape"
            android:onClick="entryBtnClicked"
            android:padding="20dp"
            android:text="@string/newEntry"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/previousResultsBtn"
            android:layout_width="274dp"
            android:layout_height="62dp"
            android:layout_margin="20dp"
            android:background="@drawable/button_round_shape"
            android:onClick="prevResultsBtnClicked"
            android:text="@string/previousResults"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/leaderboardBtn"
            android:layout_width="315dp"
            android:layout_height="67dp"
            android:layout_margin="20dp"
            android:background="@drawable/button_round_shape"
            android:onClick="leaderboardBtnClicked"
            android:text="@string/leaderboard"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/settingsBtn"
            android:layout_width="340dp"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:background="@drawable/button_round_shape"
            android:onClick="settingsBtnClicked"
            android:text="@string/settings"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>