<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/amountt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSignup"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="5dp"
        app:flow_verticalAlign="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/editingActivityTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/editItem"
                android:textAlignment="center"
                android:textSize="30dp" />

            <ImageButton
                android:id="@+id/uploadImgEdit"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_baseline_image_24" />

            <TextView
                android:id="@+id/textNameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name2" />

            <EditText
                android:id="@+id/typeedit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/name2"
                android:inputType="text"
                android:padding="5dp"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <TextView
                android:id="@+id/textFuelEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fuel" />

            <EditText
                android:id="@+id/fueledit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/fuel"
                android:inputType="text"
                android:padding="5dp"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <TextView
                android:id="@+id/textCo2Edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/co2EmissionsAmount" />

            <EditText
                android:id="@+id/amountedit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center|center_horizontal"
                android:hint="@string/amountedit"
                android:inputType="number"
                android:padding="5dp" />

            <TextView
                android:id="@+id/textQuestionEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Question" />

            <EditText
                android:id="@+id/Question2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/Question"
                android:inputType="textMultiLine"
                android:padding="5dp"
                android:selectAllOnFocus="true"
                android:singleLine="false" />

            <TextView
                android:id="@+id/textUnitEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unit" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:padding="20dp" />

            <Button
                android:id="@+id/editBtn"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/button_round_shape"
                android:gravity="center"
                android:onClick="add"
                android:padding="20dp"
                android:text="@string/edititem2"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>