<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signupLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <FrameLayout
        android:id="@+id/frameLayoutLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-30dp"
        app:layout_constraintBottom_toTopOf="@+id/cardViewSignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logoImg"
            android:layout_width="match_parent"
            android:layout_height="141dp"
            android:contentDescription="My Co2 footprint"
            app:srcCompat="@drawable/logo2" />
    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSignup"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="5dp"
        app:flow_verticalAlign="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayoutLogo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/addingActivityTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/signupTitle"
                android:textAlignment="center"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/edit_round_shape"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/firstNameHint"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <EditText
                android:id="@+id/fuel3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/edit_round_shape"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/lastNameHint"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <EditText
                android:id="@+id/email222"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/edit_round_shape"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <EditText
                android:id="@+id/oldpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="5dp"
                android:background="@drawable/edit_round_shape"
                android:ems="10"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:padding="5dp"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="5dp"
                android:background="@drawable/edit_round_shape"
                android:ems="10"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/confirmPasswordHint"
                android:inputType="textPassword"
                android:padding="5dp"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <Button
                android:id="@+id/edititem2"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="264dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/button_round_shape"
                android:gravity="center"
                android:text="@string/signupBtn"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/LogInLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center"
                android:onClick="AlreadyAMemberClicked"
                android:padding="5dp"
                android:text="@string/alreadyAMember"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>